[metadata]
name = arangodol
version = 0.0.2
url = https://github.com/i2mint/arangodol
platforms = any
description_file = README.md
root_url = https://github.com/i2mint/
license = apache-2.0
author = OtoSense
description = ArangoDB with a simple (dict-like or list-like) interface
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
		arangoDB
		data access
display_name = arangodol

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	dol
	pyArango

